[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grade_calculator"
version = "0.0.1"
authors = [
    {name = "Sulav Bista", email = "sbista01@rams.shepherd.edu"},
    {name = "Gyanu Basnet", email = "gbasne01@rams.shepherd.edu"}
]
description = "A Python package to calculate grade with tkinter GUI"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [ "Programming Language :: Python :: 3",
                "License :: OSI Approved :: MIT License", 
                "Operating System :: OS Independent", 
]
dependencies = [
    "tkinter"
]

[project.urls]
Homepage = "https://github.com/sulav25/grade_calculator"
